# UVI

./: .gitignore  README.md  TODO.md  pyproject.toml  setup.py
corpora/: OVERVIEW.md
corpora/BSO/: OVERVIEW.md
corpora/framenet/: OVERVIEW.md
corpora/ontonotes/: OVERVIEW.md
corpora/propbank/: OVERVIEW.md
corpora/reference_docs/: OVERVIEW.md
corpora/semnet20180205/: OVERVIEW.md
corpora/verbnet/: OVERVIEW.md
corpora/wordnet/: OVERVIEW.md
examples/: basic_usage.py  complete_usage_demo.py  corpus_loader_example.py  cross_corpus_navigation.py  export_examples.py  fn_graph.py  integrated_example.py  pb_graph.py  performance_benchmarks.py  presentation_monitor_usage.py  semantic_graph.py  vn_fn_wn_graph.py  vn_graph.py  wn_graph.py
src/uvi/: AnalyticsManager.py  BaseHelper.py  CorpusLoader.py  CorpusMonitor.py  CorpusRetriever.py  CrossReferenceManager.py  ExportManager.py  ParsingEngine.py  Presentation.py  README.md  ReferenceDataProvider.py  SearchEngine.py  UVI.py  ValidationManager.py  __init__.py  cli.py
src/uvi/corpus_loader/: CorpusCollectionAnalyzer.py  CorpusCollectionBuilder.py  CorpusCollectionValidator.py  CorpusLoader.py  CorpusParser.py  README.md  __init__.py
src/uvi/graph/: BaseNodeProcessor.py  DataValidator.py  FrameNetGraphBuilder.py  FrameNetPipeline.py  GraphBuilder.py  GraphBuilderPipeline.py  NodeFactory.py  PropBankGraphBuilder.py  README.md  UnifiedDataProcessor.py  VerbNetFrameNetWordNetGraphBuilder.py  VerbNetGraphBuilder.py  WordNetGraphBuilder.py  __init__.py
src/uvi/parsers/: README.md  __init__.py  bso_parser.py  framenet_parser.py  ontonotes_parser.py  propbank_parser.py  reference_parser.py  semnet_parser.py  verbnet_parser.py  vn_api_parser.py  wordnet_parser.py
src/uvi/utils/: README.md  __init__.py  cross_refs.py  file_utils.py  validation.py
src/uvi/visualizations/: FrameNetVisualizer.py  InteractiveFrameNetGraph.py  InteractiveVisualizer.py  PropBankVisualizer.py  README.md  UVIVisualizer.py  VerbNetFrameNetWordNetVisualizer.py  VerbNetVisualizer.py  Visualizer.py  VisualizerConfig.py  WordNetVisualizer.py  __init__.py
tests/: README.md  __init__.py  run_tests.py  test_corpus_collection_analyzer.py  test_corpus_collection_builder.py  test_corpus_collection_validator.py  test_corpus_loader.py  test_corpus_parser.py  test_graph_builder.py  test_integration.py  test_new_classes.py  test_package.py  test_parsers.py  test_utils.py  test_uvi.py  test_uvi_loading.py
tests/visualizations/: __init__.py  test_visualizations.py
