[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uvi"
version = "1.0.0"
description = "Unified Verb Index - Comprehensive linguistic corpora access"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "UVI Development Team", email = "dev@uvi.example.com"}
]
maintainers = [
    {name = "UVI Development Team", email = "dev@uvi.example.com"}
]
keywords = [
    "linguistics",
    "nlp",
    "verbnet",
    "framenet",
    "propbank",
    "ontonotes",
    "wordnet",
    "corpus",
    "semantic-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    # Core dependencies for XML parsing and file handling
    "lxml>=4.6.0",
    # Optional dependencies for enhanced functionality
    "beautifulsoup4>=4.9.0",
]

[project.optional-dependencies]
# File monitoring capabilities (optional)
monitoring = [
    "watchdog>=2.1.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
    "watchdog>=2.1.0"  # Include monitoring for development
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0"
]

[project.urls]
Homepage = "https://github.com/cu-clear/UVI"
Documentation = "https://github.com/cu-clear/UVI/docs"
Repository = "https://github.com/cu-clear/UVI.git"
Issues = "https://github.com/cu-clear/UVI/issues"
Changelog = "https://github.com/cu-clear/UVI/releases"

[project.scripts]
uvi-info = "uvi.cli:info_command"
uvi-validate = "uvi.cli:validate_command"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["uvi*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.json", "*.xml", "*.dtd", "*.xsd"]

# Code formatting with Black
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Import sorting with isort
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]